# _Gex

./: .gitignore  LICENSE  NOTICE  README.md  _Gex.py  gex_settings.json  index.html  main.py  package-lock.json  package.json  rebrand_to_jenny.py  requirements.txt  test_api.py
python/: LICENSE  pyproject.toml  requirements.txt
python/gene/: __init__.py  config.py  server.py  websocket.py
python/gene/agents/: __init__.py  aiassist.py  analyzer.py  engine.py  generator.py  patcher.py
python/gene/jobs/: __init__.py  queue.py
python/gene/plugins/: __init__.py  base.py  loader.py
python/gene/routes/: __init__.py  agent_routes.py  project_routes.py  template_routes.py
python/gene/telemetry/: __init__.py  collector.py
python/gene/templates/: __init__.py  manager.py
python/gene/templates/builtin/default/: README.md  gene.config.json  package.json  template.json
python/gene/templates/builtin/default/backend/: app.py  routes.py
python/gene/templates/builtin/default/electron/: main.js  preload.js
python/gene/templates/builtin/default/frontend/: index.html
python/jenny/: __init__.py  config.py  server.py  websocket.py
python/jenny/agents/: __init__.py  aiassist.py  analyzer.py  engine.py  generator.py  patcher.py
python/jenny/jobs/: __init__.py  queue.py
python/jenny/plugins/: __init__.py  base.py  loader.py
python/jenny/routes/: __init__.py  agent_routes.py  project_routes.py  template_routes.py
python/jenny/telemetry/: __init__.py  collector.py
python/jenny/templates/: __init__.py  manager.py
python/jenny/templates/builtin/default/: README.md  package.json  template.json
python/jenny/templates/builtin/default/backend/: app.py  routes.py
python/jenny/templates/builtin/default/electron/: main.js  preload.js
python/jenny/templates/builtin/default/frontend/: index.html  (+3 more)
(+160 files in other folders)
