[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jenny-runtime"
version = "1.0.0"
description = "Jenny Python Runtime — FastAPI backend, agent engine, and template system for desktop apps"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "watchdog>=3.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]
build = [
    "pyinstaller>=6.3.0",
]

[project.scripts]
jenny-runtime = "jenny.server:main"

[tool.setuptools.packages.find]
where = ["."]
